config-root/namespaces/jx-production/postegres/postegres-svc.yaml
# Source: postegres/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postegres
  labels:
    chart: "postegres-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'postegres'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: postegres-postegres
