config-root/namespaces/jx-production/postegres/postegres-ingress.yaml
# Source: postegres/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'postegres'
  name: postegres
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: postegres
            port:
              number: 80
    host: postegres-jx-production.10.0.0.100.nip.io
